2007-03-13  Per Bothner  <per@bothner.com>

	* ClassType.java (access_flags): Make non-public.
	(addModifiers): New method.

2007-02-08  Per Bothner  <per@bothner.com>

	* ArrayType.java: Implement Externalizable.
	(writeExternal, readExternal, readResolve): New methods.

	* ArrayType.java (getReflectClass): New method.
	Use element's ClassLoader.

	* Type.java: Implement java.lang.reflect.Type if JAVA5.

2007-01-20  Per Bothner  <per@bothner.com>

	* ObjectType.java (getContextClass): Fix so PreProcess doesn't break.

2007-01-19  Per Bothner  <per@bothner.com>

	* ObjectType.java (thisClassLoader): New field.
	(getContextClass): New static method.
	(getReflectClass): Use getContextClass.

2007-01-14  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java: Change to use Java 1.2 delegation model.
	I.e. implement findClass rather than loadClass if JAVA2 is enabled.
	(<init>): New constructor, to pass in parent ClassLoader.

2007-01-02  Per Bothner  <per@bothner.com>

	* Method.java (makeCloneMethod): New method.
	* ObjectType.java (getMethods): New method, "moved up" from ClassType.
	* ArrayType.java (getMethods): New method.
	* Type.java (clone_method): New static Method field.

2006-12-05  Per Bothner  <per@bothner.com>

	* ClassType.java (setInterface): Also set/clear Access.ABSTRACT.

	* ClassType.java (compare): tostring_type is less specific than Object.

	* Method.java (types): Add generic parameters if JAVA5.
	* ZipLoader.java (loadedClasses): Likewise.
	* Type.java (mapClassToType, mapNameToType): Likewise.
	(lookupType, getType, registerTypeForClass, make, <clinit>):
	Update, add synchronization.
	* ClassType.java (readResolve): Likewise.
	* ObjectType.java: Suppress warning.

2006-11-25  Per Bothner  <per@bothner.com>

	* PrimType.java (compare): Add some more special cases.

2006-11-22  Per Bothner  <per@bothner.com>

	* CodeAttr.java (calculateSplit): Make static.

2006-11-20  Per Bothner  <per@bothner.com>

	* Variable.java (dead): Make public.
