@@ -1,3 +1,8 @@
+2007-04-01  Per Bothner  <per@bothner.com>
+
+	* standard/Scheme.java (checkDefaultBinding): If name matches a
+	known package, return that Package.
+
 2007-03-31  Per Bothner  <per@bothner.com>
 
 	* standard/Scheme.java (unitNamespace): New constant field.
