@@ -1,3 +1,7 @@
+2007-04-01  Per Bothner  <per@bothner.com>
+
+	* ArrayClassLoader.java (getContextPackage): New static method.
+
 2007-03-13  Per Bothner  <per@bothner.com>
 
 	* ClassType.java (access_flags): Make non-public.
